Fixing layout issues with cards and heroes

--- a/src/assets/styles/components/card.scss
+++ b/src/assets/styles/components/card.scss
@@ -6,6 +6,7 @@
   box-shadow: $DP4;
   min-height: 20rem;
   width: 30rem;
+  margin-bottom: 1.6rem;
 }
 
 .card__title {
