--- a/src/assets/styles/components/hero/hero.scss
+++ b/src/assets/styles/components/hero/hero.scss
@@ -21,6 +21,6 @@
 .hero__details {
   background: $COLOR_DARK;
   color: $COLOR_LIGHTEST;
-  flex: 1;
   max-width: 100%;
+  padding: 1.6rem;
 }
